--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To-Do List</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial; padding: 20px; background: #f5f5f5; }
+    body { font-family: Montserrat; padding: 20px; background: #f5f5f5; }
     h2 { color: #333; }
     input[type=text] { padding: 10px; width: 70%; }
     button { padding: 10px; }
